updated linkedin url

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -137,7 +137,7 @@
           </li>
           <li>
             <a
-              href="https://www.linkedin.com/in/michael-ricasa-195260158/"
+              href="https://www.linkedin.com/in/michael-ricasa/"
               class="icon brands fa-linkedin"
               ><span class="label">LinkedIn</span></a
             >
